2009-11-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Check socket for reading if there are outstanding requests.
	* src/PeerInteractionCommand.cc

2009-11-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Moved frequently called methods to header file so they get
	inlined.
	* src/RequestSlot.cc
	* src/RequestSlot.h

2009-11-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Copied in_addr instead of just casting from char* which might
	violate strict aliasing rules.
	* src/AsyncNameResolver.cc

2009-11-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use dynamic_pointer_cast
	* test/BtPieceMessageTest.cc
	* test/BtRequestMessageTest.cc
	* test/DefaultBtRequestFactoryTest.cc

2009-11-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added testSetUrl20()
	* test/RequestTest.cc

2009-11-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Code cleanup
	* src/bittorrent_helper.cc

2009-11-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use C++ style cast
	* src/AsyncNameResolver.cc
	* src/Base64.h
	* src/BtBitfieldMessage.cc
	* src/BtHandshakeMessage.cc
	* src/DefaultBtMessageFactory.cc
	* src/DefaultBtProgressInfoFile.cc
	* src/EpollEventPoll.cc
	* src/ExpatMetalinkProcessor.cc
	* src/IteratableChecksumValidator.cc
	* src/IteratableChunkChecksumValidator.cc
	* src/MessageDigestHelper.cc
	* src/Platform.cc
	* src/RequestGroupMan.cc
	* src/SingleFileAllocationIterator.cc
	* src/Sqlite3MozCookieParser.cc
	* src/XML2SAXMetalinkProcessor.cc
	* src/Xml2XmlRpcRequestProcessor.cc
	* src/util.cc
	* src/util.h

2009-11-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed integer potential alignment problem.
	* src/bitfield.h

2009-11-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Applied a patch from tizianomueller to fix sigbus errors on Linux
	sparc. I modified the patch to eliminate a cast to uint32_t* and
	include file ordering.
	* src/PeerListProcessor.h